Some changes to project structure